--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <p>Thunder Coins: <span id="coinCount">0</span></p>
         <button onclick="upgradeClicks()">Upgrade Clicks (Cost: 100 Coins)</button>
         <p>Click Power: <span id="clickPower">1</span></p>
+        <div id="fuelContainer">
+    <label for="fuelBar">Fuel: </label>
+    <progress id="fuelBar" value="100" max="100"></progress>
+</div>
+
         <div id="characters">
             <h2>Buy New Characters</h2>
             <div id="characterShop"></div>
