--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <h1>Thunder Coin Clicker</h1>
     <div id="game">
         <img id="character" src="./photo/a8bbf7fc-3591-4cbe-960f-efd348858748.png" alt="Character" onclick="addCoins()">
-        <p>Thunder Coins: <span id="coinCount">0</span></p>
+     <div class="thumb">  <p>Thunder Coins: <span id="coinCount">0</span></p>
         <button onclick="upgradeClicks()">Upgrade Clicks (Cost: 100 Coins)</button>
+        <button id="fuelUpgradeBtn" onclick="upgradeFuelRecovery()">Upgrade Fuel Recovery (Cost: 500 Coins)</button></div>
+      
+
         <p>Click Power: <span id="clickPower">1</span></p>
         <div id="fuelContainer">
     <label for="fuelBar">Fuel: </label>
