--- a/plane.html
+++ b/plane.html
@@ -17,10 +17,9 @@
         </ul>
     </nav>
 </header>
-
     <h1>Thunder Coin Clicker</h1>
     <div id="game">
-        <img id="character" src="./photo/a8bbf7fc-3591-4cbe-960f-efd348858748.png" alt="Character" onclick="addCoins()">
+        <img id="character" src="./photo/121.png" alt="Character" onclick="addCoins()">
      <div class="thumb">  <p>Thunder Coins: <span id="coinCount">0</span></p>
         <button onclick="upgradeClicks()">Upgrade Clicks (Cost: 100 Coins)</button>
         <button id="fuelUpgradeBtn" onclick="upgradeFuelRecovery()">Upgrade Fuel Recovery (Cost: 500 Coins)</button></div>
@@ -38,7 +37,6 @@
             <div id="ownedCharacters"></div>
         </div>
     </div>
-    <script src="./game.js"></script>
-    <script src="./main.js"></script>
+    <script src="./plane.js"></script>
 </body>
 </html>
